Fix - stretched-link on card

--- a/lemarche/static/itou_marche/sections/_siae.scss
+++ b/lemarche/static/itou_marche/sections/_siae.scss
@@ -70,6 +70,12 @@
 		margin-bottom: 1.5rem;
 		border-bottom-width: 5px !important;
 
+		> .row.no-gutters {
+			> .col {
+				position: initial !important;
+			}
+		}
+
 		.sc-img {
 			width: 90px;
 		}
